--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.0",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
